--- a/index.html
+++ b/index.html
@@ -4,11 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dukaan Pay</title>
+    <title>Dukaan Payouts</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
+    <div class="mobile-screen">
+        <p class="desc">This a web only dashboard. However, give 2 more hours I can make this exact dashboard fully
+            mobile
+            responsive.</p>
+        <p class="eg">
+            Example of a fully responsive dashboard made by me: <a
+                href="https://a56-school-admin-dashboard.vercel.app">a56-school-admin-dashboard.vercel.app</a>
+        </p>
+        <p class="portfolio">Portfolio: <a href="https://ayushsaha.in">ayushsaha.in</a></p>
+    </div>
     <div class="main">
         <aside>
             <div class="sidebar">
@@ -177,6 +187,240 @@
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="svg-chevron-down-icon">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
                         </svg>
+                    </div>
+                </div>
+                <div class="overview-cards">
+                    <div class="active-card">
+                        <div class="card__header">
+                            <div class="title">Next Payout</div>
+                            <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
+                            </svg>
+                        </div>
+                        <div class="card__body">
+                            <div class="amount">₹2,312.23</div>
+                            <div class="info">
+                                <div class="info__text">23 orders</div>
+                                <svg height="16px" width="16px" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                                    class="svg-chevron-down-icon">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                                </svg>
+
+                            </div>
+                        </div>
+                        <div class="card__next">
+                            <div class="title">Next payout date:</div>
+                            <div class="text">Today, 04:00PM</div>
+                        </div>
+                    </div>
+
+                    <div class="cards__card">
+                        <div class="card__header">
+                            <div class="title">Amount Pending</div>
+                            <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
+                            </svg>
+                        </div>
+                        <div class="card__body">
+                            <div class="amount">₹92,312.20</div>
+                            <div class="info">
+                                <div class="info__text">13 orders</div>
+                                <svg height="16px" width="16px" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                                    class="svg-chevron-down-icon">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                                </svg>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="cards__card">
+                        <div class="card__header">
+                            <div class="title">Amount Processed</div>
+                            <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
+                            </svg>
+                        </div>
+                        <div class="card__body">
+                            <div class="amount">₹23,92,312.19</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="transactions">
+                <div class="transactions__title">Transactions | This Month</div>
+                <div class="transactions__filters">
+                    <div style="color: white; background-color: #146eb4;">Payouts (22)</div>
+                    <div>Refunds (2)</div>
+                </div>
+
+                <div class="transactions__table">
+                    <div class="table__header">
+                        <div class="table__search">
+                            <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="svg-search-icon">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                            </svg>
+                            <input type="text" placeholder="Order ID or transaction ID">
+                        </div>
+                        <div class="table__actions">
+                            <div class="sort">
+                                Sort
+                                <svg height="16px" width="16px" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                    viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+                                    class="svg-up-down-icon">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M3 7.5L7.5 3m0 0L12 7.5M7.5 3v13.5m13.5 0L16.5 21m0 0L12 16.5m4.5 4.5V7.5" />
+                                </svg>
+                            </div>
+                            <div class="download">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
+                                    class="svg-download-tray-icon">
+                                    <path fill-rule="evenodd"
+                                        d="M12 2.25a.75.75 0 01.75.75v11.69l3.22-3.22a.75.75 0 111.06 1.06l-4.5 4.5a.75.75 0 01-1.06 0l-4.5-4.5a.75.75 0 111.06-1.06l3.22 3.22V3a.75.75 0 01.75-.75zm-9 13.5a.75.75 0 01.75.75v2.25a1.5 1.5 0 001.5 1.5h13.5a1.5 1.5 0 001.5-1.5V16.5a.75.75 0 011.5 0v2.25a3 3 0 01-3 3H5.25a3 3 0 01-3-3V16.5a.75.75 0 01.75-.75z"
+                                        clip-rule="evenodd" />
+                                </svg>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="table-wrapper">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Date</th>
+                                    <th>Status</th>
+                                    <th>Transaction ID</th>
+                                    <th>Order amount</th>
+                                    <th>Transaction fees</th>
+                                    <th>Total</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="td-date">Today, 09:00 PM</td>
+                                    <td class="td-status">
+                                        <div class="status-processing"></div>Processing
+                                    </td>
+                                    <td class="td-trans">131634495747</td>
+                                    <td>₹10,125.00</td>
+                                    <td>₹1,125.00</td>
+                                    <td class="td-total">₹9,312</td>
+                                </tr>
+                                <tr>
+                                    <td class="td-date">Today, 03:00 PM</td>
+                                    <td class="td-status">
+                                        <div class="status-success"></div>Successful
+                                    </td>
+                                    <td class="td-trans">131634495747</td>
+                                    <td>₹10,125.00</td>
+                                    <td>₹1,125.00</td>
+                                    <td class="td-total">₹9,312</td>
+                                </tr>
+                                <tr>
+                                    <td class="td-date">Today, 09:00 AM</td>
+                                    <td class="td-status">
+                                        <div class="status-success"></div>Successful
+                                    </td>
+                                    <td class="td-trans">131634495747</td>
+                                    <td>₹10,125.00</td>
+                                    <td>₹1,125.00</td>
+                                    <td class="td-total">₹9,312</td>
+                                </tr>
+                                <tr>
+                                    <td class="td-date">Yesterday, 3:00 PM</td>
+                                    <td class="td-status">
+                                        <div class="status-success"></div>Successful
+                                    </td>
+                                    <td class="td-trans">131634495747</td>
+                                    <td>₹10,125.00</td>
+                                    <td>₹1,125.00</td>
+                                    <td class="td-total">₹9,312</td>
+                                </tr>
+                                <tr>
+                                    <td class="td-date">Yesterday, 09:00 AM</td>
+                                    <td class="td-status">
+                                        <div class="status-success"></div>Successful
+                                    </td>
+                                    <td class="td-trans">131634495747</td>
+                                    <td>₹10,125.00</td>
+                                    <td>₹1,125.00</td>
+                                    <td class="td-total">₹9,312</td>
+                                </tr>
+                                <tr>
+                                    <td class="td-date">Yesterday, 09:00 AM</td>
+                                    <td class="td-status">
+                                        <div class="status-success"></div>Successful
+                                    </td>
+                                    <td class="td-trans">131634495747</td>
+                                    <td>₹10,125.00</td>
+                                    <td>₹1,125.00</td>
+                                    <td class="td-total">₹9,312</td>
+                                </tr>
+                                <tr>
+                                    <td class="td-date">12 Jul 2023, 11:00 AM</td>
+                                    <td class="td-status">
+                                        <div class="status-success"></div>Successful
+                                    </td>
+                                    <td class="td-trans">131634495747</td>
+                                    <td>₹10,125.00</td>
+                                    <td>₹1,125.00</td>
+                                    <td class="td-total">₹9,312</td>
+                                </tr>
+                                <tr>
+                                    <td class="td-date">11 Jul 2023, 11:00 AM</td>
+                                    <td class="td-status">
+                                        <div class="status-success"></div>Successful
+                                    </td>
+                                    <td class="td-trans">131634495747</td>
+                                    <td>₹10,125.00</td>
+                                    <td>₹1,125.00</td>
+                                    <td class="td-total">₹9,312</td>
+                                </tr>
+                                <tr>
+                                    <td class="td-date">10 Jul 2023, 11:00 AM</td>
+                                    <td class="td-status">
+                                        <div class="status-success"></div>Successful
+                                    </td>
+                                    <td class="td-trans">131634495747</td>
+                                    <td>₹10,125.00</td>
+                                    <td>₹1,125.00</td>
+                                    <td class="td-total">₹9,312</td>
+                                </tr>
+                                <tr>
+                                    <td class="td-date">9 Jul 2023, 11:00 AM</td>
+                                    <td class="td-status">
+                                        <div class="status-success"></div>Successful
+                                    </td>
+                                    <td class="td-trans">131634495747</td>
+                                    <td>₹10,125.00</td>
+                                    <td>₹1,125.00</td>
+                                    <td class="td-total">₹9,312</td>
+                                </tr>
+                                <tr>
+                                    <td class="td-date">8 Jul 2023, 11:00 AM</td>
+                                    <td class="td-status">
+                                        <div class="status-success"></div>Successful
+                                    </td>
+                                    <td class="td-trans">131634495747</td>
+                                    <td>₹10,125.00</td>
+                                    <td>₹1,125.00</td>
+                                    <td class="td-total">₹9,312</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </section>
