--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <div class="mobile-screen">
-        <p class="desc">This a web only dashboard. However, give 2 more hours I can make this exact dashboard fully
+        <p class="desc">This a web only dashboard - Please visit it on a PC. However, given 2 more hours I can make this
+            exact dashboard fully
             mobile
             responsive.</p>
         <p class="eg">
