updated mobile message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
     <div class="mobile-screen">
-        <p class="desc">This a web only dashboard - Please visit it on a PC. However, given 2 more hours I can make this
+        <p class="desc">This a web only dashboard - <strong>Please visit it on a PC</strong>.Given 2 more hours I can
+            make this
             exact dashboard fully
             mobile
             responsive.</p>
